@@ -5,6 +5,7 @@ v4.9 ??? September 2009
   - Added the /API/ annotation.
   - Added sipIsAPIEnabled() to the C API.
   - Added sip.getapi() and sip.setapi() to the Python API.
+  - Added sip.ispyowned() to the Python API.
   - Mapped types can now act as a namespace for enums and static methods.
   - The /Array/ annotation can now be applied to classes and mapped types.
   - The /NoArgParser/ annotation can now be applied to class methods.
